--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         <a id="header-title" href="index.html">My Blog</a>
         <ul id="header-nav">
           <li><a href="about.html">About</a></li>
-          <li><a href="mailto:garcia.moonshine@gmail.com">Contact</a></li>
+          <li><a href="mailto:garcia.moonshine@gmail.com" target="_blank">Contact</a></li>
         </ul>
       </div>
     </div>
